# LKSolver

./: .gitignore  README.md  TODO  dune-project  main.lnk  th_prover.code-workspace
_build/default/th_prover/: th_prover.opam
_build/default/th_prover/lib/: .merlin  dune  formule.cmi  formule.ml  formule.pp.ml  formule.pp.mli  mylib.cma  mylib.cmxa  mylib.cmxs  mylib.ml-gen  sequent.ml  sequent.pp.ml
_build/default/th_prover/lib/.merlin-conf/: lib-mylib
_build/default/th_prover/lib/.mylib.inline-tests/.mylib.inline-tests.eobjs/byte/: dune__exe__Inline_test_runner_mylib.cmi  dune__exe__Inline_test_runner_mylib.cmo  dune__exe__Inline_test_runner_mylib.cmt
_build/default/th_prover/lib/.mylib.objs/: formule.ml.d  formule.pp.ml.d  formule.pp.mli.d  mylib__Formule.intf.all-deps  mylib__Sequent.impl.all-deps  sequent.ml.d  sequent.pp.ml.d
_build/default/th_prover/lib/.mylib.objs/byte/: mylib.cmi  mylib.cmo  mylib.cmt  mylib__Formule.cmi  mylib__Formule.cmo  mylib__Formule.cmt  mylib__Formule.cmti  mylib__Sequent.cmi  mylib__Sequent.cmo  mylib__Sequent.cmt
_build/default/th_prover/lib/.mylib.objs/native/: mylib.cmx  mylib__Formule.cmx  mylib__Sequent.cmx
_build/default/th_prover/test/: dune  th_prover.bc  th_prover.pp.ml
_build/default/th_prover/test/.merlin-conf/: exe-th_prover
_build/default/th_prover/test/.th_prover.eobjs/: th_prover.ml.d
_build/default/th_prover/test/.th_prover.eobjs/byte/: dune__exe__Th_prover.cmi  dune__exe__Th_prover.cmo  dune__exe__Th_prover.cmt
_build/default/th_prover/test/.th_prover.eobjs/native/: dune__exe__Th_prover.cmx
(+130 files in other folders)
