opam-version: "2.0"
name: "th_prover"
version: "0.1"
synopsis: "Proof of concept theorem prover, academic project"
description: """
Null
"""
maintainer: "Arthur Adjedj <aarthuur01@gmail.com>"
authors: "Arthur Adjedj <aarthuur01@gmail.com>"
license: "Null"
homepage: "Null"
bug-reports: "Null"
dev-repo: "git+https://github.com/BeLazy1/Theorem_prover"
depends: [ "ocaml" "ocamlfind" ]
build: ["dune" "build" "-p" name "-j" jobs]
